@@ -2,7 +2,7 @@ Package: googleVis
 Type: Package
 Title: Interface between R and the Google Chart Tools
 Version: 0.4.0
-Date: 2013-02-01
+Date: 2013-02-17
 Authors@R: c(person("Markus", "Gesmann", role = c("aut", "cre"),
                      email = "markus.gesmann@gmail.com"),
             person("Diego", "de Castillo", role = "aut",
@@ -12,13 +12,13 @@ Authors@R: c(person("Markus", "Gesmann", role = c("aut", "cre"),
 Author: Markus Gesmann, Diego de Castillo
 Maintainer: Markus Gesmann <markus.gesmann@gmail.com>
 Description: 
-   The googleVis package provides an interface between R and the
-   Google Chart Tools, formerly know as Google Visualisation API. It
-   allows users to create web pages with interactive charts based on R
+   The googleVis package provides an interface between R and the 
+   Google Chart Tools, formerly know as Google Visualisation API. It 
+   allows users to create web pages with interactive charts based on R 
    data frames, using the Google Chart Tools and to display them
    either via the local R HTTP help server or within their own sites,
    without uploading the data to Google. A modern browser with
-   Internet connection is required and for some charts Flash. Please
+   Internet connection is required and for some charts Flash. Please 
    visit the project web site for more information and examples.  
 Depends:
     R (>= 2.11.0)
@@ -27,6 +27,7 @@ Imports:
     RJSONIO,
     utils
 Suggests:
+    shiny (>= 0.3.1.99)
 License: GPL (>= 2)
 URL: http://code.google.com/p/google-motion-charts-with-r/, http://lamages.blogspot.co.uk/search/label/googleVis
 LazyLoad: yes
