@@ -361,3 +361,11 @@ Animations},
     note = {R package version 1.0-9},
     url = {\url{http://CRAN.R-project.org/package=Rook}},
   }
+
+  @Manual{shiny,
+    title = {shiny: Web Application Framework for R},
+    author = {{RStudio} and {Inc.}},
+    year = {2013},
+    note = {R package version 0.3.1.99},
+    url = {\url{http://www.rstudio.com/shiny/}},
+  }
